# moex_exchange_analysis_and_notification

./: CMakeLists.txt  Dockerfile  LICENSE  main.cpp
HTTP_REQ_AND_RESP/: ALL_STOCKS  GET_ALL_STOCKS_REQUEST  GET_YDEX_STOCKS_INFO_REQUEST  YDEX_LAST_PRICE_REQUEST
